<resources>
    <string name="app_name">Arztpraxis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_appointment">Appointments</string>
    <string name="menu_prescription">Prescriptions</string>
    <string name="name">Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="health_insurance">Health Insurance</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="personnel_number">Personnel number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emergencylevel">Pressure</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="annotation">Annotation</string>
    <string name="request">Request</string>
    <string name="appointment_annotation">Describe your complaints...</string>
    <string name="title">Title</string>
    <string name="datetime">datetime</string>
    <string name="attending_doctor">Attending doctor</string>
    <string name="requested_doctor">Requested doctor (FirstName LastName)</string>
    <string name="doctor">Doctor</string>
    <string name="settings_personalinfo">settings_personalinfo</string>
    <string name="login">Login</string>
    <string name="menu_patient">Patients</string>
    <!-- No connection Info-->
    <string name="no_data_found">no data found</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string name="health_insurance_name">health_insurance_name</string>
    <string name="health_insurance_number">health_insurance_number</string>
    <string name="address">Address</string>
    <string name="address_plz">PLZ</string>
    <string name="address_city">City</string>
    <string name="address_street">Street</string>
    <string name="address_number">Number</string>
    <string name="create_patient">create_patient</string>
    <string name="undefined">undefined</string>
    <string name="create_appointment">create_appointment</string>
    <string name="create_prescription">create_prescription</string>
    <string name="patient">Patient</string>
    <string name="prescribed_drug">prescribed_drug</string>
    <string name="diagnosed_disease">Diagnosed disease</string>
    <string name="date_of_issue">Date of issue</string>
    <string name="enter_name">Enter your Name</string>
    <string name="enter_id">Enter your ID(SSN/PN)</string>
    <string name="employee">Employee</string>
    <string name="menu_settings">Settings</string>
    <string name="nav_appointment_new">Request Appointment</string>
    <string name="nav_patient_add">Add Patient</string>
    <string name="priority">Priority</string>
    <string name="accept_appointment_request">Accept Request</string>
    <string name="treatment">Treatment</string>
    <string name="priority_low">low</string>
    <string name="priority_medium">medium</string>
    <string name="priority_high">high</string>
    <string name="no_service">You have no Permissions to see this Page</string>
</resources>
