<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.arztpraxis.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.example.arztpraxis.ui.appointment.AppointmentFragment"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_appointments" />

    <fragment
        android:id="@+id/nav_prescription"
        android:name="com.example.arztpraxis.ui.prescription.PrescriptionFragment"
        android:label="@string/menu_prescription"
        tools:layout="@layout/fragment_prescription" />

    <fragment
        android:id="@+id/nav_patient"
        android:name="com.example.arztpraxis.ui.patient.PatientFragment"
        android:label="@string/menu_patient"
        tools:layout="@layout/fragment_patient" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.arztpraxis.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_appointmentNew"
        android:name="com.example.arztpraxis.ui.appointment.AppointmentNewFragment"
        android:label="@string/nav_appointment_new"
        tools:layout="@layout/fragment_appointment_new" />

    <fragment
        android:id="@+id/nav_patientAdd"
        android:name="com.example.arztpraxis.ui.patient.PatientAddFragment"
        android:label="@string/nav_patient_add"
        tools:layout="@layout/fragment_patient_add" />

</navigation>